unpackaged/main/default/objects/Product_User__c/Product_User__c.object-meta.xml
<CustomObject>
    <description>Custom object to relate salesforce contacts to MyCase product environments</description>
    <label>Product User</label>
    <nameField>
        <label>Product User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>