unpackaged/main/default/objects/Product_User__c/fields/Accounting_Disabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Disabled_Date__c</fullName>
    <label>Accounting Disabled Date</label>
    <type>DateTime</type>
</CustomField>