unpackaged/main/default/objects/Product_User__c/fields/Accounting_Enabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Enabled_Date__c</fullName>
    <label>Accounting Enabled Date</label>
    <type>DateTime</type>
</CustomField>