unpackaged/main/default/objects/Product_User__c/fields/Accounting_Status__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Status__c</fullName>
    <inlineHelpText>Identifies the status of the Accounting feature for the firm user.</inlineHelpText>
    <label>Accounting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trial_Status</valueSetName>
    </valueSet>
</CustomField>