unpackaged/main/default/objects/Product_User__c/fields/Accounting_User__c.field-meta.xml
<CustomField>
    <fullName>Accounting_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by Mycase to identify a platform user that is also identified as an accounting user.</inlineHelpText>
    <label>Accounting User</label>
    <type>Checkbox</type>
</CustomField>