unpackaged/main/default/objects/Product_User__c/fields/Accounting_User_License__c.field-meta.xml
<CustomField>
    <fullName>Accounting_User_License__c</fullName>
    <label>Accounting User License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_License_Type</valueSetName>
    </valueSet>
</CustomField>