unpackaged/main/default/objects/Product_User__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <formula>NOT(ISBLANK( Activation_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>