unpackaged/main/default/objects/Product_User__c/fields/Activation_Token__c.field-meta.xml
<CustomField>
    <fullName>Activation_Token__c</fullName>
    <label>Activation Token</label>
    <length>30</length>
    <type>Text</type>
</CustomField>