unpackaged/main/default/objects/Product_User__c/fields/Addon_User__c.field-meta.xml
<CustomField>
    <fullName>Addon_User__c</fullName>
    <formula>Added_Date__c &gt;  Product_Environment__r.First_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addon User</label>
    <type>Checkbox</type>
</CustomField>