unpackaged/main/default/objects/Product_User__c/fields/Archived_User__c.field-meta.xml
<CustomField>
    <fullName>Archived_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when user is archived from product by firm</description>
    <label>Archived User</label>
    <type>Checkbox</type>
</CustomField>