unpackaged/main/default/objects/Product_User__c/fields/Billing_System_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Billing System User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>