unpackaged/main/default/objects/Product_User__c/fields/Contact_Matched_On__c.field-meta.xml
<CustomField>
    <fullName>Contact_Matched_On__c</fullName>
    <inlineHelpText>Point in matching process that the PU was linked to a Contact</inlineHelpText>
    <label>Contact Matched On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>