unpackaged/main/default/objects/Product_User__c/fields/Contact_Record_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email address from the linked contact</inlineHelpText>
    <label>Contact Record Email</label>
    <type>Text</type>
</CustomField>