unpackaged/main/default/objects/Product_User__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Moved from the Contact object to Product User object 12/26/22</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>