unpackaged/main/default/objects/Product_User__c/fields/Created_During_Cutover__c.field-meta.xml
<CustomField>
    <fullName>Created_During_Cutover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created During Cutover</label>
    <type>Checkbox</type>
</CustomField>