unpackaged/main/default/objects/Product_User__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <formula>Product_Environment__r.Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>