unpackaged/main/default/objects/Product_User__c/fields/Firm_UUID__c.field-meta.xml
<CustomField>
    <fullName>Firm_UUID__c</fullName>
    <description>External Firm UUID to enable Salesforce flow to lookup Product Environment related to Product User</description>
    <label>Firm UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>