unpackaged/main/default/objects/Product_User__c/fields/Intercom_Sync__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intercom_Sync</label>
    <type>Checkbox</type>
</CustomField>