unpackaged/main/default/objects/Product_User__c/fields/Intercom_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Intercom_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Intercom User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>