unpackaged/main/default/objects/Product_User__c/fields/Invalid_Trial__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked via Workato when a duplicate trial is requested to trigger an email alert</description>
    <label>Invalid Trial</label>
    <type>Checkbox</type>
</CustomField>