unpackaged/main/default/objects/Product_User__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead related to the the product user</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Product Users</relationshipLabel>
    <relationshipName>Product_Users</relationshipName>
    <type>Lookup</type>
</CustomField>