unpackaged/main/default/objects/Product_User__c/fields/Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Login_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>