unpackaged/main/default/objects/Product_User__c/fields/Master_User__c.field-meta.xml
<CustomField>
    <fullName>Master_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master User</label>
    <type>Checkbox</type>
</CustomField>