unpackaged/main/default/objects/Product_User__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <description>Contact ID from legacy MC System</description>
    <label>MyCase ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>