unpackaged/main/default/objects/Product_User__c/fields/Placeholder_User__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_User__c</fullName>
    <formula>IF(CONTAINS(Name, &quot;Placeholder&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placeholder User</label>
    <type>Checkbox</type>
</CustomField>