unpackaged/main/default/objects/Product_User__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Product Users</relationshipLabel>
    <relationshipName>Product_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>