unpackaged/main/default/objects/Product_User__c/fields/Run_Contact_Matching__c.field-meta.xml
<CustomField>
    <fullName>Run_Contact_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected Contact matching flow will run</inlineHelpText>
    <label>Run Contact Matching</label>
    <type>Checkbox</type>
</CustomField>