unpackaged/main/default/objects/Product_User__c/fields/Score_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Score_Behavior__c</fullName>
    <label>Score Behavior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>