unpackaged/main/default/objects/Product_User__c/fields/Score_Demographic__c.field-meta.xml
<CustomField>
    <fullName>Score_Demographic__c</fullName>
    <label>Score Demographic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>