unpackaged/main/default/objects/Product_User__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>Product_Environment__r.Firm_Status__c</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>