unpackaged/main/default/objects/Product_User__c/fields/User_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivation_Reason__c</fullName>
    <label>User Deactivation Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Deactivation_Reasons</valueSetName>
    </valueSet>
</CustomField>