unpackaged/main/default/objects/Product_User__c/fields/User_Deactivation_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>User_Deactivation_Reason_Other__c</fullName>
    <inlineHelpText>Describes the reason in more detail when selecting &quot;Other&quot; as the user deactivation reason.</inlineHelpText>
    <label>User Deactivation Reason (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>