unpackaged/main/default/objects/Product_User__c/fields/User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>User_First_Name__c</fullName>
    <label>User First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>