unpackaged/main/default/objects/Product_User__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>User Id of the contact in the associated product environment</description>
    <externalId>true</externalId>
    <inlineHelpText>User Id of the contact in the associated product environment</inlineHelpText>
    <label>User ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>