unpackaged/main/default/objects/Product_User__c/fields/User_ID_CP__c.field-meta.xml
<CustomField>
    <fullName>User_ID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>User ID for Casepeer user</inlineHelpText>
    <label>User ID (CP)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>