unpackaged/main/default/objects/Product_User__c/fields/User_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>User_ID_DW__c</fullName>
    <externalId>true</externalId>
    <label>User ID (DW)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>