unpackaged/main/default/objects/Product_User__c/fields/User_License__c.field-meta.xml
<CustomField>
    <fullName>User_License__c</fullName>
    <inlineHelpText>Identifies the license associated to an accounting user.</inlineHelpText>
    <label>User License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_License_Type</valueSetName>
    </valueSet>
</CustomField>