unpackaged/main/default/objects/Product_User__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <label>User Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>