unpackaged/main/default/objects/Product_User__c/fields/User_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Status__c</fullName>
    <inlineHelpText>Status of the user in the product system.</inlineHelpText>
    <label>User Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>