unpackaged/main/default/objects/Product_User__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <label>User Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>