unpackaged/main/default/objects/Product_User__c/fields/User_UUID__c.field-meta.xml
<CustomField>
    <fullName>User_UUID__c</fullName>
    <description>User UUID of the contact in the associated product environment</description>
    <externalId>true</externalId>
    <inlineHelpText>User UUID of the contact in the associated product environment</inlineHelpText>
    <label>User UUID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>