unpackaged/main/default/objects/Product_User__c/fields/User_UUID_CP__c.field-meta.xml
<CustomField>
    <fullName>User_UUID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Casepeer User UUID</inlineHelpText>
    <label>User UUID (CP)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>