unpackaged/main/default/objects/Product_User__c/fields/User_UUID_DW__c.field-meta.xml
<CustomField>
    <fullName>User_UUID_DW__c</fullName>
    <externalId>true</externalId>
    <label>User UUID (DW)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>