unpackaged/main/default/objects/Product_User__c/listViews/MyCase_All.listView-meta.xml
<ListView>
    <fullName>MyCase_All</fullName>
    <columns>NAME</columns>
    <columns>User_First_Name__c</columns>
    <columns>User_Last_Name__c</columns>
    <columns>User_ID__c</columns>
    <columns>User_Email__c</columns>
    <columns>Product_Environment__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>MyCase</value>
    </filters>
    <label>MyCase All</label>
</ListView>